style.css
svg {
    margin: 0 auto;
    background: #fff;
    display: block;
}

body {
    margin: 0;
    background: #fff;
}

div#secret {
    display: none;
}

.svg-container {
    display: inline-block;
    position: relative;
    width: 100%;
    vertical-align: top;
    overflow: hidden;
}

.svg-content {
    display: inline-block;
    position: absolute;
    top: 0;
    left: 0;
}

g {
    opacity: 0.6;
    transition: opacity 0.2s ease-in-out;
    overflow: visible;
    cursor: default;
}

g:hover {
    opacity: 1;
}

g div {
    padding: 10px;
    background: #fff;
    /* text-align: center; */
    vertical-align: middle;
    white-space: pre;
    visibility: hidden;
    border-radius: 10px;
    box-shadow: 0 0 6px rgba(0, 0, 0, 0.6);
}

.controls {
    visibility: visible;
}

g:hover div {
    visibility: visible;
}

/* .histogram {
    visibility: hidden;
} */

/* .show-histogram .histogram {
    visibility: inherit;
} */

